Descrição da alteração

--- a/gerar.html
+++ b/gerar.html
@@ -30,7 +30,7 @@
     </header>
     
     <main class="container">
-        <form action="#" method="post" class="gerar-form">
+        <form action="about:blank" method="post" class="gerar-form">
             <label for="descricao">Descrição da Imagem:</label><br>
             <input type="text" id="descricao" name="descricao" placeholder="Ex: Um gato no espaço" required><br><br>
             <button type="submit">Gerar Imagem</button>
