--- a/contato.html
+++ b/contato.html
@@ -24,8 +24,8 @@
         <h1 class="h1-contato">Contato</h1>
         <p class="p-contato">Preencha o formulário abaixo:</p>
 
-        <form action="contato.html" method="post" class="contato">
-            
+        <form action="about:blank" method="post" class="contato">
+
             <label for="Nome">Nome:</label>
             <input type="text" name="Nome" id="Nome" placeholder="Seu nome" required>
 
