Descrição da alteração

--- a/contato.html
+++ b/contato.html
@@ -35,7 +35,7 @@
             <label for="Mensagem">Mensagem:</label>
             <textarea name="Mensagem" id="Mensagem" placeholder="Sua mensagem" required></textarea>
 
-            <button type="submit">Enviar</button>
+            <button type="button">Enviar</button>
         </form>
     </main>
 
