Descrição da alteração

--- a/gerar.html
+++ b/gerar.html
@@ -34,7 +34,7 @@
         <form action="#" method="post" class="gerar-form">
             <label for="descricao">Descrição da Imagem:</label><br>
             <input type="text" id="descricao" name="descricao" placeholder="Ex: Um gato no espaço" required><br><br>
-            <button type="submit">Gerar Imagem</button>
+            <button type="button">Gerar Imagem</button>
         </form>
 
         <h2 class="imagem-titulo">Imagem Gerada</h2>
